Fix spacing on action status

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -57,7 +57,6 @@
 }
 
 .action-item .action-status {
-  float: right;
   font-style: oblique;
 
   grid-column-start: 2;
